--- a/views/footer.mustache
+++ b/views/footer.mustache
@@ -1,17 +1,17 @@
 <footer>  
-    <nav class="navbar navbar-expand-sm fixed-bottom">
-        <div class="container-fluid nav-container">   
-            <div class="collapse navbar-collapse nav-container">
-                <div class="navbar-nav jj-nav-group">
-                    <a href="/" id="nav1" class="nav-link">Home</a>
-                    <div class="vertical-spacer"></div>
-                    <a href="/menus" id="nav2" class="nav-link">Menus</a>
-                    <div class="vertical-spacer"></div>
-                    <a href="#" id="nav3" class="nav-link">Reviews</a>
-                    <div class="vertical-spacer"></div>
-                    <a href="#" id="nav4" class=" nav-link">About Us</a>
-                    <div class="vertical-spacer"></div>
-                    <a href="#" id="nav5" class="nav-link">Contact Us</a>
+    <nav>
+        <div>   
+            <div>
+                <div>
+                    <a href="/" id="nav1" >Home</a>
+                    <div />
+                    <a href="/menus" id="nav2">Menus</a>
+                    <div />
+                    <a href="#" id="nav3">Reviews</a>
+                    <div />
+                    <a href="#" id="nav4">About Us</a>
+                    <div />
+                    <a href="#" id="nav5">Contact Us</a>
                 </div>
             </div>
         </div>
