--- a/css for migration/homecss.css
+++ b/css for migration/homecss.css
@@ -3,33 +3,13 @@
     src: url(/css/Warnes-Regular.ttf);
 }
 
-.home-main-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: center;
-    max-width: 100%;
-    height: 100%;
-}
-
-.logo-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: stretch;
-    align-items: center;
+div{
+    color: rgba(255, 255, 255, 1);
 }
 
 .welcome-neon {
-    display: inline-block;
-    border: none;
-    margin: 0px;
-    padding-right: 20px;
-    flex-direction: row;
     transition: text-shadow 200ms cubic-bezier(0.42, 0, 0.58, 1);
-    font: normal normal bold 96px/normal Warnes;
-    line-height: 100%;
+    font: normal normal bold 50px/normal Warnes;
     text-align: center;
     white-space: nowrap;
     text-shadow: 0 0 10px rgba(255, 255, 255, 1), 0 0 20px rgba(255, 255, 255, 1), 0 0 30px rgba(255, 255, 255, 1), 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de;
@@ -39,17 +19,8 @@
     text-shadow: 0 0 10px rgba(255, 255, 255, 1), 0 0 20px rgba(255, 255, 255, 1), 0 0 30px rgba(255, 255, 255, 1), 0 0 40px #00ffff, 0 0 70px #00ffff, 0 0 80px #00ffff, 0 0 100px #00ffff;
 }
 
-.phone-layout {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 .phone-number {
-    padding: 0;
     font-size: 40px;
-    color: rgb(255, 255, 255, 1);
 }
 
 #JJPhoneNumber {
@@ -100,4 +71,10 @@ h1.lc-text {
 #map {
     min-width: 100%;
     min-height: 100%;
+}
+
+@media screen and (max-width: 575px) {
+    .welcome-neon {
+        font-size: 50px;
+    }
 }
