--- a/views/header.mustache
+++ b/views/header.mustache
@@ -1,9 +1,9 @@
 {{!header element to contain any common scripts etc}}
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+{{!shrink to fit??}}
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{{title}}</title>
-<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="icons/font/bootstrap-icons.css">
-<link rel="stylesheet" href="/css/global.css">
-<link rel="stylesheet" href="/css/mobilemenu.css">
-<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<link rel="stylesheet" href="/style.css" />
