--- a/views/home.mustache
+++ b/views/home.mustache
@@ -3,53 +3,48 @@
 
 <head>
     {{>header}}
-    <link rel="stylesheet" href="/css/homecss.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
 </head>
 
 <body>
     <main>
-        <div class="container-fluid home-main-container">
-            <div class="logo-container">
-                <img src="/img/jjLogo.png" loading="eager" width="100" height="100" alt="Business Logo">
-            </div>
-            <h1 class="welcome-neon">
+        <div>
+            {{lat}} {{lng}}
+            <img src="/img/jjLogo.png" height="50px" width="50px" loading="eager" alt="Business Logo" id="jjLogo">
+            <div>
                 WELCOME
-            </h1>
-            <div class="phone-layout">
-                <i class="bi bi-phone phone-number"></i>
-                <a class="phone-number" href="tel:01418480898" id="JJPhoneNumber">0141 848 0898</a>
             </div>
-            <div class="two-column-layout">
-                <div class="column">
-                    <div class="lc-section">
-                        <h1 class="lc-text">
-                            Where to find us
-                        </h1>
-                        <address class="lc-text">
-                            16 Shuttle Street<br>Paisley<br>Pa1 1YD
-                        </address>
-                    </div>
-
-
-                    <div class="lc-section">
-                        <h1 class="lc-text">
-                            Opening times
-                        </h1>
-                        <div class="lc-text">
-                            SUN - THURS<br>12:00 - 20:00<br>FRI - SAT<br>12:00 - 21:00
+            <div>
+                <div>
+                    <i></i>
+                    <a href="tel:01418480898" id="JJPhoneNumber">0141 848 0898</a>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <div>
+                                Where to find us
+                            </div>
+                            <address>
+                                16 Shuttle Street<br>Paisley<br>Pa1 1YD
+                            </address>
+                        </div>
+                        <div>
+                            <div>
+                                Opening times
+                            </div>
+                            <div>
+                                SUN - THURS<br>12:00 - 20:00<br>FRI - SAT<br>12:00 - 21:00
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="column">
-                    {{>map}}
+                    <div>
+                    </div>
                 </div>
             </div>
         </div>
-        {{>mobilenav}}
     </main>
     {{>footer}}
-    {{>scripts}}
 </body>
 
 </html>
